Commit: Add Like working among other things

--- a/src/main/resources/static/AdamMeetsEve.css
+++ b/src/main/resources/static/AdamMeetsEve.css
@@ -67,6 +67,9 @@ th{
     color: #ffffff;
 }
 
+#btn row{
+    display: inline-block;
+}
 #myModal {
     display: none; /* Hidden by default */
     position: fixed;
