--- a/src/main/resources/static/profile.css
+++ b/src/main/resources/static/profile.css
@@ -9,7 +9,7 @@ body {
 h1 {
     padding-top: 175px;
     padding-left: 390px;
-    height: 260px;
+    height: 285px;
     width: 100%;
     margin:0;
     background-color: #fffff0;
@@ -17,6 +17,24 @@ h1 {
 
 table, tr, th, td {
     border: 1px gray;
+}
+
+#likesButton
+{
+    background: transparent;
+}
+
+.profBtn
+{
+    background: transparent;
+    border: 1px solid black ;
+}
+
+#buttonimg
+{
+    background: transparent;
+    max-width: 25px; max-height: 25px; width: auto; height: auto;
+
 }
 
 .index-body {
