--- a/src/main/resources/templates/searchresult.html
+++ b/src/main/resources/templates/searchresult.html
@@ -32,9 +32,13 @@
 
 <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
     <a class="navbar-brand abs" th:href="@{/}">AdamMeetsEve</a>
+    <ul class="navbar-nav mr-auto">
+        Current Profile: <span th:utext="${session.activeProfile}"></span>
+    </ul>
     <ul class="navbar-nav ml-auto">
         <a th:href="@{/displayall}" class="btn btn-outline-success my-2 my-sm-0 barBtn">Find All Users</a>
         <button class="btn btn-outline-success my-2 my-sm-0 barBtn" id="advSearchBtn" data-toggle="modal" data-target="#searchModal">Advanced Search</button>
+        <a th:href="@{'/viewprofile/' + ${session.activeProfile}}" class="btn btn-outline-success my-2 my-sm-0 barBtn">Return To Your Profile</a>
         <form action="logout" th:action="@{/logout}" method="post">
             <button type="submit" class="btn btn-info btn-md barBtn">Logout</button>
         </form>
@@ -116,10 +120,10 @@
 
 
 <script>
-    var modal = document.getElementById('myModal');
+    var modal = document.getElementById('searchModal');
 
     // Get the button that opens the modal
-    var btn = document.getElementById("loginBtn");
+    var btn = document.getElementById("advSearchBtn");
 
     // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
@@ -131,7 +135,10 @@
 
     // When the user clicks on <span> (x), close the modal
     span.onclick = function() {
-        modal.style.display = "none";
+        $("#searchModal").removeClass("in");
+        $(".modal-backdrop").remove();
+        $("#searchModal").hide();
+        $("#searchModal").removeData();
     }
 
     // When the user clicks anywhere outside of the modal, close it
