--- a/src/main/resources/static/profile.css
+++ b/src/main/resources/static/profile.css
@@ -30,6 +30,17 @@ table, tr, th, td {
     border: 1px solid black ;
 }
 
+#dateModal
+{
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+}
 #buttonimg
 {
     background: transparent;
